Minor Changes: Shifted footer out of main section Added  smooth scrolling behavior Fixed dropdown menu Made link colors global Changed footer font

--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,10 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .dropdown {
   position: relative;
   display: inline-block;
@@ -45,6 +49,7 @@
   transition-delay: 0ms !important;
   font-weight: 500;
   background: #313131d1;
+  width: max-content;
 }
 
 .project-menu a {
@@ -224,12 +229,14 @@ main p {
   text-align: justify;
 }
 
-main a {
+* a {
   color: lightblue;
+  text-decoration: none;
 }
 
-main a:visited {
+* a:visited {
   color: lightslategray;
+  text-decoration: none;
 }
 
 /* Chromium-exclusive CSS-only Reveal animation */
@@ -256,7 +263,7 @@ main a:visited {
 }
 
 footer {
-  font-family: "IBM Plex Sans", system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: InterVariable, "IBM Plex Sans", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
   font-size: smaller;
